# peter-wanna-know

./: .gitattributes  AGENTS.md  CHANGELOG.md  CONCEPTS.md  CONFIGURATION.md  CONTRIBUTORS.md  HERMES_SETUP.md  README.md  SKILL-original.md  SKILL.md  gemini-extension.json  package.json  pyproject.toml  release-notes.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml  security.yml
commands/: last30days.md
docs/: how-search-works.md  pr-credits.md  search-quality-eval.md  v2.1-launch-copy.md  v2.5-launch-tweets.md
docs/plans/: 2026-04-22-002-feat-competitors-flag-comparison-fanout-plan.md  2026-04-22-003-fix-competitors-per-entity-resolution-plan.md  2026-04-22-006-fix-comparison-title-skill-attribution-plan.md  (+2 more)
peter-wanna-know/: package.json
tests/: __init__.py  conftest.py  e2e_comparison.py  test_bird_x.py  test_cli_competitors.py  test_cli_v3.py  test_competitor_subrun_isolation.py  test_competitors_plan_threading.py  test_competitors_resolve_integration.py  test_digg.py  test_env_keychain.py  test_evaluator_v3.py  test_footer_nudge_suppression.py  test_html_render.py  test_last_run_state.py  test_pipeline_v3.py  test_planner_v3.py  test_plugin_contract.py  test_quality_nudge.py  test_regression.py  test_render_comparison_multi.py  test_render_v3.py  test_save_raw_per_entity.py  test_security_workflow.py  test_setup_openclaw.py  test_skill_version.py  test_subproc.py  test_verify_v3.py  test_version_consistency.py  test_watchlist_delivery.py
(+63 files in other folders)
